docs/api/qiskit-ibm-runtime/0.30/visualization.mdx
---
title: visualization (v0.30)
description: API reference for qiskit_ibm_runtime.visualization in qiskit-ibm-runtime v0.30
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit_ibm_runtime.visualization
---

<span id="visualization-qiskit-ibm-runtime-visualization" />

<span id="module-qiskit_ibm_runtime.visualization" />

# Visualization

`qiskit_ibm_runtime.visualization`

A suite of functions for visualizing qiskit-ibm-runtime’s objects.

## Functions

|                                                                                                                                                                  |                                                                                                                                                           |
| ---------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`draw_layer_error_map`](qiskit_ibm_runtime.visualization.draw_layer_error_map "qiskit_ibm_runtime.visualization.draw_layer_error_map")(layer\_error, embedding) | Draw a map view of a [`LayerError`](qiskit_ibm_runtime.utils.noise_learner_result.LayerError "qiskit_ibm_runtime.utils.noise_learner_result.LayerError"). |

